Update minor overflow and padding issues
The Recommendations section had overflow and padding
issues on mobile that I somehow missed. These are fixed now.

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -282,7 +282,7 @@ footer {
 
 
 /*----- Cards -----*/
-.card:not(#search_form, .recommendations) {
+.card:not(#search_form):not(.recommendations) {
     margin-bottom: 50px;
 }
 
@@ -597,6 +597,10 @@ ul.collapsible {
     .new-direction,
     .recipe-card {
         border-radius: 8px;
+    }
+
+    .card .recommendations {
+        margin-bottom: 2rem;
     }
 
     .card-image {
